--- a/Exam Management/WebContent/exam.css
+++ b/Exam Management/WebContent/exam.css
@@ -1,4 +1,3 @@
-@charset "ISO-8859-1";
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
 *{
   padding: 0;
@@ -8,6 +7,7 @@
 }
 body {
   font-family: 'Roboto', sans-serif;
+  height: 300px;
 }
 .sidebar {
   position: fixed;
@@ -19,6 +19,7 @@ body {
 }
 .sidebar header {
   font-size: 22px;
+  margin-top: -25px;
   color: white;
   line-height: 70px;
   text-align: center;
@@ -43,6 +44,8 @@ ul li:hover a{
 }
 .sidebar ul a i{
   margin-right: 16px;
+
+  
 }
 #check{
   display: none;
@@ -50,7 +53,7 @@ ul li:hover a{
 label #btn,label #cancel{
   position: absolute;
   background: #042331;
-  border-radius: 3px;
+  border-radius: 8px;
   cursor: pointer;
 }
 label #btn{
@@ -71,7 +74,8 @@ label #cancel{
   transition: all .5s ease;
 }
 #check:checked ~ .sidebar{
-  left: 0;
+  left: 0
+
 }
 #check:checked ~ label #btn{
   left: 250px;
@@ -85,15 +89,16 @@ label #cancel{
   margin-left: 250px;
 }
 section{
-  background: url(123.png) no-repeat;
+  background:url(background.png) no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 615px;
   transition: all .5s;
 }
 
 .name {
   float: right;
+  margin-top: -25px;
   padding-top: 17px;
   color: black;
   padding-right: 5px;
@@ -108,7 +113,6 @@ section{
 .column {
   float: left;
   width: 35%;
-  height: 450px;
   margin-top: 1%;
   margin-left: 50px;
 
@@ -130,4 +134,15 @@ section{
   float: right;
   padding-top: 15px;
 
+}
+
+.form {
+  padding-left: 150px;
+  padding-top: 40PX;
+  width: 250px;
+}
+
+.title {
+  padding-top: 50px;
+  width: 100%;
 }
