--- a/Exam Management/WebContent/exam.css
+++ b/Exam Management/WebContent/exam.css
@@ -89,7 +89,7 @@ label #cancel{
   margin-left: 250px;
 }
 section{
-  background:url(background.png) no-repeat;
+  background:url(123.png) no-repeat;
   background-position: center;
   background-size: cover;
   height: 615px;
